--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>The Weir Programme → TXT + QR</title>
+  <title>The Weir Programme → QR</title>
   <style>
     body{font-family:Arial, sans-serif; margin:0; min-height:100vh; background:#0f1724; color:#e6eef6}
     .wrap{max-width:800px;margin:28px auto;padding:20px}
@@ -14,75 +14,59 @@
     textarea{min-height:60px}
     button{margin-top:16px;padding:10px 14px;border:none;border-radius:8px;background:#60a5fa;color:#04263b;cursor:pointer;font-weight:bold}
     #result{margin-top:20px;text-align:center}
-    #downloadLink{display:inline-block;margin-top:12px;padding:8px 12px;background:#2d3748;color:#e6eef6;border-radius:8px;text-decoration:none}
   </style>
 </head>
 <body>
   <div class="wrap">
     <h1>The Weir – Theatre Programme Form</h1>
     <div class="card">
+      <!-- Form Fields Same as Before -->
       <label>Theatre</label>
       <input id="theatre" type="text" value="Harold Pinter Theatre" />
-
       <label>Address</label>
       <input id="address" type="text" value="6 Panton Street, London, SW1Y 4DN" />
-
       <label>Website</label>
       <input id="website" type="text" value="https://www.haroldpintertheatre.co.uk/" />
-
       <label>Box Office Link</label>
       <input id="boxoffice" type="text" value="https://www.haroldpintertheatre.co.uk/shows/the-weir" />
-
       <label>Run Dates</label>
       <input id="rundates" type="text" value="11 September – 6 December 2025" />
-
       <label>Schedule</label>
       <textarea id="schedule">- Monday to Saturday: 7:30 PM
 - Saturday Matinee: 2:30 PM
 - Sunday: Dark</textarea>
-
       <label>Running Time</label>
       <input id="runtime" type="text" value="1 hour 45 minutes (no interval)" />
-
       <label>Age Guidance</label>
       <input id="age" type="text" value="12+" />
-
       <label>Ticket Prices</label>
       <input id="tickets" type="text" value="From £20 (subject to a £3.95 transaction fee)" />
-
       <label>Smoking</label>
       <input id="smoking" type="text" value="Smoking on stage" />
-
       <label>About the Play</label>
       <textarea id="about">"The Weir" is a modern Irish classic by Conor McPherson, first performed in 1997. 
 Set in a rural Irish pub, the play unfolds as locals share ghost stories, leading to a revelation that changes their lives forever.</textarea>
-
       <label>Director</label>
       <input id="director" type="text" value="Conor McPherson" />
-
       <label>Cast</label>
       <textarea id="cast">- Brendan Gleeson as Jack
 - Owen McDonnell as Brendan
 - Seán McGinley as Jim
 - Kate Phillips as Valerie
 - Tom Vaughan-Lawlor as Finbar</textarea>
-
       <label>Synopsis</label>
       <textarea id="synopsis">On a stormy night in a remote Irish pub, four men gather to share stories. 
 When Valerie, a newcomer, joins them, their tales take a supernatural turn, 
 leading to an unexpected and haunting revelation.</textarea>
-
       <label>Booking Information</label>
       <textarea id="booking">Official Box Office: https://www.haroldpintertheatre.co.uk/shows/the-weir
 Ticket Price: From £20
 Age Guidance: 12+
 Smoking: Smoking on stage</textarea>
-
       <label>Additional Resources</label>
       <textarea id="resources">- British Theatre Guide Review (PDF): https://www.britishtheatreguide.info/reviews/the-weir-harold-pinter-t-24915.pdf
 - Playbill Synopsis: https://playbill.com/production/the-weir-london-harold-pinter-theatre-2025</textarea>
-
-      <button id="generate">Generate Programme TXT + QR</button>
+      <button id="generate">Generate Programme Page + QR</button>
     </div>
     <div id="result"></div>
   </div>
@@ -112,44 +96,40 @@ Smoking: Smoking on stage</textarea>
         resources: document.getElementById('resources').value
       };
 
-      // Build text document
-      let textData = "==============================\nTheatre Programme: The Weir\n==============================\n\n";
-      textData += "Venue Details:\n--------------\n";
-      textData += `Theatre: ${data.theatre}\nAddress: ${data.address}\nWebsite: ${data.website}\nBox Office: ${data.boxoffice}\n\n`;
+      // Build HTML content for new page
+      let htmlContent = `<!doctype html><html><head><meta charset=\"utf-8\"><title>The Weir Programme</title><style>body{font-family:Arial,sans-serif;background:#0f1724;color:#e6eef6;padding:20px}h1{font-size:24px}pre{white-space:pre-wrap;word-wrap:break-word}</style></head><body><h1>The Weir – Theatre Programme</h1><pre>`;
+      htmlContent += `==============================\nTheatre Programme: The Weir\n==============================\n\n`;
+      htmlContent += `Venue Details:\n--------------\nTheatre: ${data.theatre}\nAddress: ${data.address}\nWebsite: ${data.website}\nBox Office: ${data.boxoffice}\n\n`;
+      htmlContent += `Performance Dates:\n------------------\nRun Dates: ${data.rundates}\nSchedule:\n${data.schedule}\nRunning Time: ${data.runtime}\nAge Guidance: ${data.age}\nTicket Prices: ${data.tickets}\nSmoking: ${data.smoking}\n\n`;
+      htmlContent += `About the Play:\n---------------\n${data.about}\n\n`;
+      htmlContent += `Cast & Creative Team:\n--------------------\nDirector: ${data.director}\nCast:\n${data.cast}\n\n`;
+      htmlContent += `Synopsis:\n---------\n${data.synopsis}\n\n`;
+      htmlContent += `Booking Information:\n-------------------\n${data.booking}\n\n`;
+      htmlContent += `Additional Resources:\n---------------------\n${data.resources}\n`;
+      htmlContent += `</pre></body></html>`;
 
-      textData += "Performance Dates:\n------------------\n";
-      textData += `Run Dates: ${data.rundates}\nSchedule:\n${data.schedule}\nRunning Time: ${data.runtime}\nAge Guidance: ${data.age}\nTicket Prices: ${data.tickets}\nSmoking: ${data.smoking}\n\n`;
-
-      textData += "About the Play:\n---------------\n" + data.about + "\n\n";
-
-      textData += "Cast & Creative Team:\n--------------------\nDirector: " + data.director + "\nCast:\n" + data.cast + "\n\n";
-
-      textData += "Synopsis:\n---------\n" + data.synopsis + "\n\n";
-
-      textData += "Booking Information:\n-------------------\n" + data.booking + "\n\n";
-
-      textData += "Additional Resources:\n---------------------\n" + data.resources + "\n";
-
-      // Create blob file
-      const blob = new Blob([textData], {type: 'text/plain'});
-      const url = URL.createObjectURL(blob);
+      // Create blob URL for new page
+      const pageBlob = new Blob([htmlContent], {type: 'text/html'});
+      const pageUrl = URL.createObjectURL(pageBlob);
 
       // Clear previous result
       resultDiv.innerHTML = '';
 
-      // Add download link
-      const a = document.createElement('a');
-      a.id = 'downloadLink';
-      a.href = url;
-      a.download = 'the-weir-programme.txt';
-      a.textContent = 'Download Programme TXT';
-      resultDiv.appendChild(a);
-
-      // Add QR code
+      // Create QR code linking to new page
       const qrDiv = document.createElement('div');
       qrDiv.style.marginTop = '20px';
       resultDiv.appendChild(qrDiv);
-      new QRCode(qrDiv, { text: url, width: 220, height: 220 });
+      new QRCode(qrDiv, { text: pageUrl, width: 220, height: 220 });
+
+      // Optional: open new page in new tab
+      const openLink = document.createElement('a');
+      openLink.href = pageUrl;
+      openLink.target = '_blank';
+      openLink.textContent = 'Open Programme Page';
+      openLink.style.display = 'inline-block';
+      openLink.style.marginTop = '12px';
+      openLink.style.color = '#60a5fa';
+      resultDiv.appendChild(openLink);
     });
   </script>
 </body>
