--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>Pocket Programme Form</h1>
+    <h1>Form</h1>
     <div class="card">
       <label>Play Name</label>
       <input id="playName" type="text" value="The Weir" />
